# JB-karnen

./: README.md  karnen-task.cabal
app/: Karnen.hs  Main.hs  Relational.hs  Utils.hs
app/Functional/: Connectors.hs  Elems.hs  Evals.hs  Generators.hs
