cabal-version:      2.4
name:               karnen-task
version:            0.1.0.0

author:             gt22
maintainer:         igorengel@mail.ru

executable karnen-task
    main-is:          Main.hs
    other-modules:    Karnen
                 ,    Utils
                 ,    Functional.Connectors
                 ,    Functional.Elems
                 ,    Functional.Generators
                 ,    Functional.Evals
                 ,    Relational

    build-depends:    base ^>=4.14.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
